--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
+    "history": "^4.10.1",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -22,7 +27,45 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "airbnb",
+      "airbnb/hooks",
+      "eslint:recommended",
+      "plugin:sonarjs/recommended",
+      "plugin:react/recommended",
+      "plugin:@typescript-eslint/recommended"
+    ],
+    "plugins": [
+      "sonarjs",
+      "react",
+      "@typescript-eslint"
+    ],
+    "rules": {
+      "no-console": "error",
+      "no-debugger": "error",
+      "import/prefer-default-export": "error",
+      "no-underscore-dangle": "off",
+      "no-param-reassign": "error",
+      "vars-on-top": "error",
+      "prefer-promise-reject-errors": "error",
+      "object-shorthand": "error",
+      "no-else-return": "error",
+      "semi": "error",
+      "quotes": [
+        "error",
+        "single",
+        {
+          "avoidEscape": true
+        }
+      ],
+      "brace-style": "error",
+      "dot-notation": "off",
+      "sonarjs/cognitive-complexity": [
+        "error",
+        36
+      ]
+    }
   },
   "browserslist": {
     "production": [
@@ -35,5 +78,25 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@namics/stylelint-bem": "^6.3.1",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.8",
+    "@types/react-router": "^5.1.7",
+    "@types/react-router-dom": "^5.1.5",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-sonarjs": "^0.5.0",
+    "lint-staged": "^10.2.2",
+    "stylelint-config-sass-guidelines": "^7.0.0",
+    "stylelint-scss": "^3.17.2",
+    "stylelint-selector-bem-pattern": "^2.1.0"
   }
 }
