--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
       "airbnb",
       "airbnb/hooks",
       "eslint:recommended",
@@ -36,6 +35,25 @@
       "plugin:react/recommended",
       "plugin:@typescript-eslint/recommended"
     ],
+    "env": {
+      "browser": true
+    },
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    },
+    "settings": {
+      "import/resolver": {
+        "node": {
+          "extensions": [
+            ".js",
+            ".jsx",
+            ".ts",
+            ".tsx"
+          ]
+        }
+      }
+    },
     "plugins": [
       "sonarjs",
       "react",
@@ -64,7 +82,19 @@
       "sonarjs/cognitive-complexity": [
         "error",
         36
-      ]
+      ],
+      "linebreak-style": "off",
+      "import/extensions": [
+        "error",
+        "ignorePackages",
+        {
+          "js": "never",
+          "jsx": "never",
+          "ts": "never",
+          "tsx": "never"
+        }
+      ],
+      "react/jsx-filename-extension": "off"
     }
   },
   "browserslist": {
@@ -92,11 +122,28 @@
     "@typescript-eslint/parser": "^2.31.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-sonarjs": "^0.5.0",
     "lint-staged": "^10.2.2",
     "stylelint-config-sass-guidelines": "^7.0.0",
     "stylelint-scss": "^3.17.2",
     "stylelint-selector-bem-pattern": "^2.1.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "node_modules/.bin/eslint --fix --max-warnings=0",
+      "git add"
+    ],
+    ".scss": [
+      "stylelint --fix",
+      "git add"
+    ]
   }
 }
